--- a/1_final_project/hash_map_san.dSYM/Contents/Info.plist
+++ b/1_final_project/hash_map_san.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.interp_san</string>
+		<string>com.apple.xcode.dsym.hash_map_san</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
